Translate footer text

--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -157,14 +157,14 @@
             </div>
           </div>
           <div>
-            <h2>Funded by</h2>
+            <h2>{{ 'Funded by' | i18n(null, locale) }}</h2>
             <div class="supporter-logos">
-              <img src="/static/img/ppl_logo.png" alt="Peoples Postcode Lottery Logo" />
-              <img src="/static/img/eafrd_logo.jpg" alt="Welsh Government Logo" />
+              <img src="/static/img/ppl_logo.png" alt="{{ 'Peoples Postcode Lottery Logo' | i18n(null, locale) }}" />
+              <img src="/static/img/eafrd_logo.jpg" alt="{{ 'Welsh Government Logo' | i18n(null, locale) }}" />
             </div>
           </div>
           <div>
-            <h2>Legals</h2>
+            <h2>{{ 'Legals' | i18n(null, locale) }}</h2>
             <div class="links">
               <ul>
                 <li>
@@ -172,7 +172,7 @@
                     href="https://www.ramblers.org.uk/technical-stuff/privacy-policy.aspx"
                     rel="noopener"
                     target="_blank"
-                    >Privacy Policy</a
+                    >{{ 'Privacy Policy' | i18n(null, locale) }}</a
                   >
                 </li>
                 <li>
@@ -180,7 +180,7 @@
                     href="https://www.ramblers.org.uk/technical-stuff/terms-and-conditions.aspx"
                     rel="noopener"
                     target="_blank"
-                    >Terms and Conditions</a
+                    >{{ 'Terms and Conditions' | i18n(null, locale) }}</a
                   >
                 </li>
                 <li>
@@ -188,7 +188,7 @@
                     href="https://www.ramblers.org.uk/technical-stuff/use-of-cookies.aspx"
                     rel="noopener"
                     target="_blank"
-                    >Cookie Policy</a
+                    >{{ 'Cookie Policy' | i18n(null, locale) }}</a
                   >
                 </li>
               </ul>
