Update colour of contact banner

--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -408,7 +408,7 @@ section.hero.about {
 
 section.hero.contact {
   background-image: url("/static/img/contact_banner.png");
-  background-color: #F9C8AB;
+  background-color: #9BC8AB;
 }
 
 section.hero .prose {
