--- a/map/src/map.css
+++ b/map/src/map.css
@@ -198,6 +198,11 @@ h2 {
     justify-content: space-between;
 }
 
+.info-panel header p:first-child {
+  margin: 0;
+  color: #999;
+}
+
 .info-panel header p {
   font-size: larger;
   margin-top: 0em;
