Info panel stats table margin tweak

--- a/map/src/map.css
+++ b/map/src/map.css
@@ -231,6 +231,7 @@ h2 {
   padding: 1em;
   border-left: 10px solid #339;
   margin-bottom: 2em;
+  margin-left: -10px;
 }
 
 .info-panel table.stats th {
