Open in new tab icon on external link

--- a/map/src/map.css
+++ b/map/src/map.css
@@ -192,6 +192,11 @@ h2 {
   padding: 1em;
 }
 
+.filter-panel fieldset a:after {
+  content: ' open_in_new';
+  font-family: 'Material Icons';
+}
+
 .info-panel header div {
     display: flex;
     flex-direction: row;
