Route difficulty PDF, correct orange

--- a/website/src/static/css/common.css
+++ b/website/src/static/css/common.css
@@ -398,7 +398,7 @@ section.hero {
 
 section.hero.home {
   background-image: url("/static/img/home_banner.png");
-  background-color: #f1814f;
+  background-color: #f08050;
 }
 
 section.hero.about {
