Added .closures legend

--- a/map/src/map.css
+++ b/map/src/map.css
@@ -277,6 +277,11 @@ h2 {
   align-items: center;
 }
 
+.filter-panel .closures legend {
+  display: flex;
+  align-items: center;
+}
+
 .filter-panel .gazetteer .autocomplete {
   width: 100%;
 }
