Update Traveller's Rest Wood PDF

--- a/website/src/_includes/base.njk
+++ b/website/src/_includes/base.njk
@@ -197,7 +197,7 @@
         </div>
       </footer>
     </div>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8" crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KLZPCB75D"></script>
     <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-7KLZPCB75D');</script>
   </body>
